--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         </ul>
 
                         <!-- Copyrights note -->
-                        <div class="text-gray-400 text-sm mr-4">&copy; Cruip.com. All rights reserved.</div>
+                        <div class="text-gray-400 text-sm mr-4">&copy; Schedify.io. All rights reserved.</div>
 
                     </div>
 
