--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <!-- Section header -->
                         <div class="max-w-3xl mx-auto text-center pb-12 md:pb-16">
                             <h1 class="h1 mb-4" data-aos="fade-up">The Scheduler Toolkit</h1>
-                            <p class="text-xl text-gray-400 mb-8" data-aos="fade-up" data-aos-delay="200">Scheduling seems to be easy, at least before the things go wrong. Schedify helps companies to keep on track and retry jobs with ease.</p>
+                            <p class="text-xl text-gray-400 mb-8" data-aos="fade-up" data-aos-delay="200">Scheduling seems to be easy, at least before things go wrong. Schedify helps companies to keep on track and retry jobs with ease.</p>
                             <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
                                 <div data-aos="fade-up" data-aos-delay="400">
                                     <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="#0">Start free trial</a>
